--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,11 @@ serde = "1.0.228"
 serde_json = "1.0.145"
 snafu = "0.8.9"
 substring = "1.4.5"
+time = "0.3.44"
 toml = "0.9.8"
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.20", features = ["local-time"] }
+
 
 [lints.clippy]
 # Set the unwrap_used lint level to deny
