--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,14 +20,13 @@ chrono = "0.4.42"
 dashmap = "6.1.0"
 futures = "0.3.31"
 gpui = "0.2.2"
-gpui-component = "0.4.1"
-gpui-component-assets = "0.4.1"
+gpui-component = "0.5.0-preview2"
+gpui-component-assets = "0.5.0-preview2"
 gpui-macros = "0.2.2"
 home = "0.5.12"
 humansize = "2.1.3"
 humantime = "2.3.0"
 locale_config = "0.3.0"
-lsp-types = "0.97.0"
 parking_lot = "0.12.5"
 pretty-hex = "0.4.1"
 redis = { version = "1.0.0-rc.4", features = [
@@ -46,9 +45,9 @@ snafu = "0.8.9"
 substring = "1.4.5"
 time = "0.3.44"
 toml = "0.9.8"
-tracing = "0.1.41"
-tracing-subscriber = { version = "0.3.20", features = ["local-time"] }
-uuid = "1.18.1"
+tracing = "0.1.43"
+tracing-subscriber = { version = "0.3.22", features = ["local-time"] }
+uuid = "1.19.0"
 
 
 [lints.clippy]
