--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ gpui-macros = "0.2.2"
 home = "0.5.12"
 humansize = "2.1.3"
 humantime = "2.3.0"
+infer = "0.19.0"
 locale_config = "0.3.0"
 mimalloc = { version = "0.1.48", optional = true }
 parking_lot = "0.12.5"
