--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ redis = { version = "1.0.2", features = [
     "cluster-async",
     "smol-comp",
     "smol-rustls-comp",
+    "tls-rustls-insecure",
     "aio",
 ] }
 rmp-serde = "1.3.1"
