feat(protobuf): add raw protobuf format detection and schema-based decoding
Add protobuf support for Redis value inspection:
- Implement raw protobuf wire format parser with heuristic detection
- Add ProtobufSchema state for loading .proto files via protoc
- Integrate protobuf type selector in status bar with file picker
- Support both raw (schema-less) and schema-based protobuf decoding
- Add comprehensive unit tests (50 tests) for protobuf parsing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,8 @@ redis = { version = "1.0.2", features = [
     "tls-rustls-insecure",
     "aio",
 ] }
+prost-reflect = { version = "0.14", features = ["serde"] }
+rfd = "0.15"
 rmp-serde = "1.3.1"
 rust-embed = { version = "8.9.0", default-features = false }
 rust-i18n = "3.1.5"
