--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,7 @@ rmp-serde = "1.3.1"
 rust-embed = { version = "8.9.0", default-features = false }
 rust-i18n = "3.1.5"
 ruzstd = "0.8.2"
+zstd = "0.13"
 schemars = "1.1.0"
 semver = "1.0.27"
 serde = "1.0.228"
