feat(editor): add advanced edit dialog with format conversion and compression
- Add EditValueDialog component for editing Redis bytes values
- Support format switching (Text, JSON, Hex, MessagePack) with value-level
  JSON ↔ MessagePack conversion
- Add compression format selection (None, Gzip, Zstd, Snappy, LZ4)
- Implement codec module with format detection, compression/decompression
- Add EditSession state management for tracking edits and validation
- Fix format switch error message display in UI layer
- Add zstd dependency for compression support

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,6 +53,7 @@ russh = "0.56.0"
 rust-embed = { version = "8.9.0", default-features = false }
 rust-i18n = "3.1.5"
 ruzstd = "0.8.2"
+zstd = "0.13"
 schemars = "1.1.0"
 semver = "1.0.27"
 serde = "1.0.228"
