fix(ci): make macOS code signing and notarization optional
Add conditional checks to skip certificate import, app signing,
notarization, and stapling steps when secrets are not configured.
This allows the workflow to build unsigned DMG files for forks
without Apple Developer certificates.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -38,6 +38,7 @@ jobs:
           cargo install cargo-bundle
           brew install create-dmg
       - name: Import Code-Signing Certificates
+        if: ${{ secrets.MACOS_CERTIFICATE != '' }}
         env:
           p12_certificate: ${{ secrets.MACOS_CERTIFICATE }}
           p12_password: ${{ secrets.MACOS_CERTIFICATE_PWD }}
@@ -65,6 +66,7 @@ jobs:
         run: |
           cargo bundle --release --target ${{ matrix.target }} --features mimalloc
       - name: sign app
+        if: ${{ secrets.MACOS_CERTIFICATE != '' }}
         env:
           CERT_NAME: ${{ secrets.MACOS_CERTIFICATE_NAME }}
         run: |
@@ -92,6 +94,7 @@ jobs:
             "$DMG_NAME" \
             "$APP_PATH"
       - name: notarize dmg
+        if: ${{ secrets.AC_USERNAME != '' }}
         env:
           AC_USERNAME: ${{ secrets.AC_USERNAME }}
           AC_PASSWORD: ${{ secrets.AC_PASSWORD }}
@@ -105,8 +108,10 @@ jobs:
             --team-id "$AC_TEAM_ID" \
             --wait
       - name: wait for propagation
+        if: ${{ secrets.AC_USERNAME != '' }}
         run: sleep 30
       - name: staple DMG
+        if: ${{ secrets.AC_USERNAME != '' }}
         run: |
           DMG_NAME="release/${{ env.APP_NAME }}-${{ matrix.dmg_suffix }}.dmg"
           xcrun stapler staple "$DMG_NAME"
