--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -199,3 +199,16 @@ jobs:
         run: |
           ./.github/workflows/upload_asset.sh ./zedis-linux-x86_64.tar.gz $GITHUB_TOKEN
           ./.github/workflows/upload_asset.sh ./zedis-x86_64.AppImage.tar.gz $GITHUB_TOKEN
+
+  publish-release:
+    name: Publish Release
+    runs-on: ubuntu-latest
+    needs: [macos, windows, linux]
+    if: startsWith(github.ref, 'refs/tags/')
+    steps:
+      - uses: actions/checkout@v6
+      - name: Publish release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          gh release edit "${{ github.ref_name }}" --draft=false
